# multiplexer

./: .gitignore  .mcp.json  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  prod-playwright-testing.md  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: release.yml
playwright/: test-parsers.cjs  test-parsers.ts  tsconfig.json
scripts/: dev-stop.sh  dev.sh  playwright-mcp.sh  prod-test-stop.sh  prod-test.sh  run-e2e.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: boltz.rs  commands.rs  lib.rs  main.rs  models.rs  poller.rs  prefs.rs  storage.rs
src/components/: CompoundDetail.tsx  CsvPreviewTable.tsx  MolStarErrorBoundary.tsx  MolStarViewer.tsx  MoleculeImage.tsx  OnboardingCard.tsx  PaeImage.tsx  RdkitProvider.tsx  ResultsTable.tsx  RunSubmissionForm.tsx  SettingsSheet.tsx  Sidebar.tsx
src/hooks/: useTauriEvents.ts
src/lib/: tauri-api.ts
src/main/: index.ts  menu.ts
src/main/lib/: auto-updater.ts
src/main/models/: state.ts  types.ts
src/main/services/: boltz-client.ts  file-manager.ts  (+6 more)
src/renderer/: index.html
src/stores/: useAppStore.ts
tests/e2e/: 01-onboarding.spec.ts  02-settings.spec.ts  03-campaign-creation.spec.ts  04-campaign-detail.spec.ts  05-run-creation.spec.ts  06-results-viewing.spec.ts  07-compound-detail.spec.ts  08-sidebar.spec.ts  09-keyboard-shortcuts.spec.ts  10-layout.spec.ts  11-workspace-dir.spec.ts  12-csv-export.spec.ts
(+45 files in other folders)
